# Massively-Parallel-ML

./: .gitignore  README.md  pyproject.toml
MNIST/centralized/: assignCluster  assignCluster.py  kmeans  kmeans.py  main.py  mnist_centralized.ipynb  read.py
MNIST/centralized_version/: assignCluster.py  main.py  mnist_centralized.ipynb  read.py
MNIST/parallel_version/: mnist_parallelized.ipynb
botnet/: setup.py
botnet/centralized_version/: accuracy.py  botnet_centralized.ipynb  main.py  normalize.py  predict.py  preprocess.py  train.py  train_comments.py
botnet/cross_validation/: accuracy.py  botnet_cross.ipynb  get_block_data.py  main.py  normalize.py  predict.py  train.py  transform.py
botnet/parallel_version/: accuracy.py  bonet_parallelized.ipynb  botnet_parallelized.ipynb  main.py  normalize.py  predict.py  preprocess.py  train.py
mnist/parallel_version/: assignCluster.py  kmeans.py  main.py  read.py
